apps/media/slskd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd
  namespace: media
  labels:
    app: slskd
spec:
  selector:
    matchLabels:
      app: slskd
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: slskd
    spec:
      # Forces Kubernetes to kill faster
      terminationGracePeriodSeconds: 5
      # Ensures DNS lookups go through the VPN.
      # This should prevent DNS leaks.
      # This is only a placeholder and should replaced by gluetun automatically with the correct DNS server.
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.8.0.1  # Placeholder! See above.
      volumes:
        - name: gluetun-shared
          emptyDir:
            medium: Memory
        - name: slskd
          persistentVolumeClaim:
            claimName: slskd
        - name: slskd-config
          configMap:
            name: config-map-slskd-config
        - name: media
          hostPath:
            path: /mnt/nas/Media
      containers:
        # --- VPN SIDECAR CONTAINER (GLUETUN) ---
        - name: gluetun
          image: qmcgaw/gluetun:latest
          imagePullPolicy: IfNotPresent
          # Required for changing the network settings for the whole pod (i.e. both containers)
          securityContext:
            capabilities:
              add: [NET_ADMIN]
          ports:
            - name: webui
              containerPort: 5030
          volumeMounts:
            - name: gluetun-shared
              mountPath: /tmp/gluetun
        # --- APPLICATION CONTAINER (slskd) ---
        - name: slskd
          image: slskd/slskd:latest
          imagePullPolicy: IfNotPresent
          # Traffic should be routed through gluetun, thus no network stack definition here.          
          # This INCLUDES ports!
          command:
            - /bin/sh
            - -c
            - |
              # Read the forwarded port file if it exists, otherwise default to a fallback
              if [ -s /tmp/gluetun/active_port ]; then
                PORT=$(cat /tmp/gluetun/active_port | tr -d '\r\n ')
              else
                PORT=1234 # Default fallback port
              fi

              echo "Launching slskd with active port: $PORT"
              sed -i "s/listen_port:.*/listen_port: $PORT/g" /app/slskd.yml
              ps -aux
              ss -tulpn
              exec /usr/bin/tini -- /entrypoint.sh ./slskd
          volumeMounts:
            - name: gluetun-shared
              mountPath: /tmp/gluetun
            - name: slskd
              mountPath: /app
            - name: media
              mountPath: /mnt/nas/Media
            - name: slskd-config
              mountPath: /app/slskd.yml
              subPath: slskd.yml
          # If Gluetun changes the port later, this probe fails, forcing K8s to 
          # restart ONLY this container.
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 1
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  if [ -f /tmp/gluetun/force_restart ]; then
                    echo "Poison Pill found! Removing flag and triggering container restart."
                    rm -f /tmp/gluetun/force_restart
                    exit 1
                  fi
        - name: port-syncer
          image: alpine:latest
          command:
            - /bin/sh
            - -c
            - |
              [...]
          volumemounts:
            - name: gluetun-shared
              mountpath: /tmp/gluetun
