apps/media/slskd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: slskd
  ports:
    - name: http
      port: 5030
      targetPort: 5030
